--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#intro">Home</a></li>
-        <li><a href="#about">About</a></li>
+<!--         <li><a href="#about">About</a></li> -->
 		<li><a href="#service">Service</a></li>
 		<li><a href="#contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
@@ -64,7 +64,7 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>WELCOME TO <span class="text_color">KEENAN’S WEBSITE</span> </h2>
+			<h2>HEY <span class="text_color">MELISSA!</span> </h2>
 			<h4>WE ARE GROUP OF GENTLEMEN MAKING AWESOME WEB WITH BOOTSTRAP</h4>
 		</div>
 		<div class="page-scroll">
@@ -75,7 +75,8 @@
     </section>
 	<!-- /Section: intro -->
 
-	<!-- Section: about -->
+<!-- 
+	 Section: about 
     <section id="about" class="home-section text-center">
 		<div class="heading-about">
 			<div class="container">
@@ -150,7 +151,8 @@
         </div>		
 		</div>
 	</section>
-	<!-- /Section: about -->
+	/Section: about
+	 -->
 	
 
 	<!-- Section: services -->
@@ -162,7 +164,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our Services</h2>
+					<h2>Services</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -185,8 +187,8 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Print</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Mastering</h5>
+						<p>blah blah blah</p>
 					</div>
                 </div>
 				</div>
@@ -198,8 +200,8 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Web Design</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Mixing</h5>
+						<p>blah blah blah</p>
 					</div>
                 </div>
 				</div>
@@ -211,21 +213,8 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Photography</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-                </div>
-				</div>
-            </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInRight" data-wow-delay="0.2s">
-                <div class="service-box">
-					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
-					</div>
-					<div class="service-desc">
-						<h5>Cloud System</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Support and Licensing</h5>
+						<p>blah blah blah</p>
 					</div>
                 </div>
 				</div>
@@ -246,7 +235,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Get in touch</h2>
+					<h2>Reach out to try for free!</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -286,9 +275,10 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
+                                <option value="Website: Free Mastering">Gimme one-a them free masters!</option>
+                                <option value="Website: Mastering">Mastering</option>
+                                <option value="Website: Mixing">Mixing</option>
+                                <option value="Website: Other">Other</option>
                             </select>
                         </div>
                     </div>
@@ -308,7 +298,7 @@
                 </form>
             </div>
         </div>
-		
+		<!-- 
 		<div class="col-lg-4">
 			<div class="widget-contact">
 				<h5>Main Office</h5>
@@ -335,7 +325,7 @@
 				</address>					
 			
 			</div>	
-		</div>
+		</div> -->
     </div>	
 
 		</div>
