--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 		<div class="slogan">
 			<h2>HEY <span class="text_color">MELISSA!</span> </h2>
-			<h4>WE ARE GROUP OF GENTLEMEN MAKING AWESOME WEB WITH BOOTSTRAP</h4>
+			<h4>blah blah blah</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
