--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <h1>SQUAD FREE</h1>
+                    <h1>Online Mixing and Mastering</h1>
                 </a>
             </div>
 
@@ -43,7 +43,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#intro">Home</a></li>
 <!--         <li><a href="#about">About</a></li> -->
-		<li><a href="#service">Service</a></li>
+		<li><a href="#service">Services</a></li>
 		<li><a href="#contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
@@ -64,8 +64,8 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>HEY <span class="text_color">MELISSA!</span> </h2>
-			<h4>lololololol</h4>
+			<h2>LOOKING FOR A <span class="text_color"> FREE MASTER?</span> </h2>
+			<h4>First timers get a free, professional master. No strings attached.</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
@@ -164,7 +164,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Services</h2>
+					<h2>How it works:</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -187,8 +187,8 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Mastering</h5>
-						<p>blah blah blah</p>
+						<h5>Free Master</h5>
+						<p>Get a song mastered totally free of charge, and without any commitment. CD quality .mp3's, high quality .wav's, the whole shebang. We're that confident you're going to like it.</p>
 					</div>
                 </div>
 				</div>
@@ -200,8 +200,8 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Mixing</h5>
-						<p>blah blah blah</p>
+						<h5>$25 Masters</h5>
+						<p>After your first polished track, we promise a flat mastering rate of $25 per song. If you can find a lower price out there in this big ole world of ours, we'll match it.</p>
 					</div>
                 </div>
 				</div>
@@ -213,8 +213,21 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Support and Licensing</h5>
-						<p>blah blah blah</p>
+						<h5>Affordable Mixing</h5>
+						<p>Need a little more than a master? We also offer quality mixing services at bottom-of-the-barrel rates (inquire below for details)</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInUp" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-3.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Contact us today</h5>
+						<p>Scroll down and fill out our contact form to reach us. We can't wait to hear you!</p>
 					</div>
                 </div>
 				</div>
@@ -235,7 +248,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Reach out to try for free!</h2>
+					<h2>Reach out to try us for free!</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -252,7 +265,7 @@
 			</div>
 		</div>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="boxed-grey">
                 <form id="contact-form">
                 <div class="row">
@@ -276,8 +289,8 @@
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Website: Free Mastering">Gimme one-a them free masters!</option>
-                                <option value="Website: Mastering">Mastering</option>
-                                <option value="Website: Mixing">Mixing</option>
+                                <option value="Website: Mastering">$25 Mastering</option>
+                                <option value="Website: Mixing">Affordable Mixing</option>
                                 <option value="Website: Other">Other</option>
                             </select>
                         </div>
