--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 		<li><a href="#service">Services</a></li>
 		<li><a href="#contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Example menu</a></li>
+            <li><a href="/payment/payment.html">Payment</a></li>
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
           </ul>
