--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="boxed-grey">
-                <form id="contact-form">
+                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@gmail.com">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -342,6 +342,10 @@
     </div>	
 
 		</div>
+
+
+
+
 	</section>
 	<!-- /Section: contact -->
 
