--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mastering and Mixing Services</title>
+    <title>Get Mastered</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -48,7 +48,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="/payment/payment.html">Payment</a></li>
+            <li><a href="/payment.html">Payment</a></li>
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
           </ul>
@@ -183,12 +183,12 @@
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="service-box">
-					<div class="service-icon">
+					<!-- <div class="service-icon">
 						<img src="img/icons/service-icon-1.png" alt="" />
-					</div>
+					</div> -->
 					<div class="service-desc">
-						<h5>Free Master</h5>
-						<p>Get a song mastered totally free of charge, and without any commitment. CD quality .mp3's, high quality .wav's, the whole shebang. We're that confident you're going to like it.</p>
+						<h5>Try For Free</h5>
+						<p>Get a song mastered totally free of charge, and without any commitment. </p>
 					</div>
                 </div>
 				</div>
@@ -196,12 +196,12 @@
 			<div class="col-sm-3 col-md-3">
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
-					<div class="service-icon">
+					<!-- <div class="service-icon">
 						<img src="img/icons/service-icon-2.png" alt="" />
-					</div>
+					</div> -->
 					<div class="service-desc">
-						<h5>$25 Masters</h5>
-						<p>After your first polished track, we promise a flat mastering rate of $25 per song. If you can find a lower price out there in this big ole world of ours, we'll match it.</p>
+						<h5>Get Mastered</h5>
+						<p>If you want more help than just one song, I promise a flat mastering rate of $25 per song. If you can find a lower price out there in this big ole world of ours, I'll match it.</p>
 					</div>
                 </div>
 				</div>
@@ -209,12 +209,12 @@
 			<div class="col-sm-3 col-md-3">
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
-					<div class="service-icon">
+					<!-- <div class="service-icon">
 						<img src="img/icons/service-icon-3.png" alt="" />
-					</div>
+					</div> -->
 					<div class="service-desc">
-						<h5>Affordable Mixing</h5>
-						<p>Need a little more than a master? We also offer quality mixing services at bottom-of-the-barrel rates (inquire below for details)</p>
+						<h5>Get Mixed</h5>
+						<p>Need a little more than a master? I also offer quality mixing at equally low (inquire below for details)</p>
 					</div>
                 </div>
 				</div>
@@ -222,12 +222,12 @@
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
-					<div class="service-icon">
+					<!-- <div class="service-icon">
 						<img src="img/icons/service-icon-3.png" alt="" />
-					</div>
+					</div> -->
 					<div class="service-desc">
-						<h5>Contact us today</h5>
-						<p>Scroll down and fill out our contact form to reach us. We can't wait to hear you!</p>
+						<h5>Reach out today</h5>
+						<p>Scroll on down and fill out the contact form to reach me. I can't wait to hear you!</p>
 					</div>
                 </div>
 				</div>
@@ -248,7 +248,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Reach out to try us for free!</h2>
+					<h2>Reach out to try for free!</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -288,10 +288,9 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Website: Free Mastering">Gimme one-a them free masters!</option>
-                                <option value="Website: Mastering">$25 Mastering</option>
-                                <option value="Website: Mixing">Affordable Mixing</option>
-                                <option value="Website: Other">Other</option>
+                                <option value="Mastering">Get Me Mastered</option>
+                                <option value="Mixing">Get Me Mixed</option>
+                                <option value="Webiste: Other">Other</option>
                             </select>
                         </div>
                     </div>
