--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="/payment.html">Payment</a></li>
+            <li><a href="payment.html">Payment</a></li>
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
           </ul>
