--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="payment.html">Payment</a></li>
-            <li><a href="#">Example menu</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li><a href="#">Example menu</a></li>
           </ul>
         </li>
@@ -359,7 +359,7 @@
 						</a>
 					</div>
 					</div>
-					<p>&copy;Copyright 2014 - Squad. All rights reserved.</p>
+					<!-- <p>&copy;Copyright 2014 - Squad. All rights reserved.</p> -->
 				</div>
 			</div>	
 		</div>
