--- a/payment.html
+++ b/payment.html
@@ -41,9 +41,14 @@
 
 			<div>
 
-			<table>
+			<table  align="center">
 			<tr>
-				<td><input type="hidden" name="on0" value="Service">Service</td>
+				<td><input type="hidden" name="on0" value="Service"></td>
+			</tr>
+			<tr>
+				<td>
+					<p> <p>
+				</td>
 			</tr>
 			<tr>
 				<td><select name="os0">
@@ -51,6 +56,16 @@
 					<option value="Mix - Under 32 Stems">Mix - Under 24 Stems $100.00 USD</option>
 					<option value="Mix - 32 Stems or More">Mix - 24 Stems or More $150.00 USD</option>
 					</select> 
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p> <p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p> <p>
 				</td>
 			</tr>
 			</table>
