--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <h1>Online Mixing and Mastering</h1>
+                    <h1>Get Mastered</h1>
                 </a>
             </div>
 
