--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 		<div class="slogan">
 			<h2>LOOKING FOR A <span class="text_color"> FREE MASTER?</span> </h2>
-			<h4>First timers get a free, professional master. No strings attached.</h4>
+			<h4>For each friend you refer, you can get a free master. Just scroll down for details.</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
