--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>LOOKING FOR A <span class="text_color"> FREE MASTER?</span> </h2>
-			<h4>For each friend you refer, you can get a free master. Just scroll down for details.</h4>
+			<h2>GET MASTERED<span class="text_color"> FOR FREE</span> </h2>
+			<h4>I've gone Oprah. Giving away free masters for new users, with no commitment</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
