--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div> -->
 					<div class="service-desc">
-						<h5>Try For Free</h5>
-						<p>Get a song mastered totally free of charge, and without any commitment. </p>
+						<h5></h5>
+						<p></p>
 					</div>
                 </div>
 				</div>
@@ -200,8 +200,8 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div> -->
 					<div class="service-desc">
-						<h5>Get Mastered</h5>
-						<p>If you want more help than just one song, I promise a flat mastering rate of $25 per song. If you can find a lower price out there in this big ole world of ours, I'll match it.</p>
+						<h5>1. Get in Touch</h5>
+						<p>Paste a link to one of your best songs in the form below</p>
 					</div>
                 </div>
 				</div>
@@ -213,8 +213,8 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div> -->
 					<div class="service-desc">
-						<h5>Get Mixed</h5>
-						<p>Need a little more than a master? I also offer quality mixing at equally low (inquire below for details)</p>
+						<h5>2. Get Mastered</h5>
+						<p>I master one of your songs, totally on the free</p>
 					</div>
                 </div>
 				</div>
@@ -226,8 +226,8 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div> -->
 					<div class="service-desc">
-						<h5>Reach out today</h5>
-						<p>Scroll on down and fill out the contact form to reach me. I can't wait to hear you!</p>
+						<h5></h5>
+						<p></p>
 					</div>
                 </div>
 				</div>
@@ -248,7 +248,9 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Reach out to try for free!</h2>
+					<h2>1. Get in Touch</h2>
+					<p>Disclaimer: Due to the large number of responses I have gotten lately, I am not able to handle one-hundred percent of submissions I recieve, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send your stuff!<p>
+						
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
