--- a/index.html
+++ b/index.html
@@ -249,8 +249,9 @@
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
 					<h2>1. Get in Touch</h2>
+
 					<p>Disclaimer: Due to the large number of responses I have gotten lately, I am not able to handle one-hundred percent of submissions I recieve, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send your stuff!<p>
-						
+
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -290,8 +291,8 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Mastering">Get Me Mastered</option>
-                                <option value="Mixing">Get Me Mixed</option>
+                                <option value="Free free free gimme!">Free master, free master, gimme!</option>
+                                <option value="Mixing">I heard from this choice that you mix as well. Is that true? Can I get in on some of that?</option>
                                 <option value="Webiste: Other">Other</option>
                             </select>
                         </div>
