--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 					<div class="section-heading">
 					<h2>1. Get in Touch</h2>
 
-					<p>Disclaimer: Due to the large number of responses I have gotten lately, I am not able to handle one-hundred percent of submissions I recieve, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send your stuff!<p>
+					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send your stuff!<p>
 
 					<i class="fa fa-2x fa-angle-down"></i>
 
