--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 		<div class="slogan">
 			<h2>GET MASTERED<span class="text_color"> FOR FREE</span> </h2>
-			<h4>I've gone Oprah. Giving away free masters for new users, with no commitment</h4>
+			<h4>Giving away free masters for new users, with no commitment</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
@@ -250,7 +250,7 @@
 					<div class="section-heading">
 					<h2>1. Get in Touch</h2>
 
-					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send your stuff!<p>
+					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send me a link!<p>
 
 					<i class="fa fa-2x fa-angle-down"></i>
 
