--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="payment.html">Payment</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Example menu</a></li>
+<!--             <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Example menu</a></li> -->
           </ul>
         </li>
       </ul>
