little layout change

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>GET MASTERED<span class="text_color"> FOR FREE</span> </h2>
-			<h4>Giving away free masters for new users, with no commitment</h4>
+			<p></p>
+			<h2><span>GET MASTERED</span><span> FOR FREE</span> </h2>
+			<h4>Free mastering job for new users, with no commitment</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
@@ -250,7 +251,7 @@
 					<div class="section-heading">
 					<h2>1. Get in Touch</h2>
 
-					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Put your money where your mouth is (or rather, your lack of money) and send me a link!<p>
+					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Send me a link!<p>
 
 					<i class="fa fa-2x fa-angle-down"></i>
 
