--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 		<div class="slogan">
 			<p></p>
-			<h2><span>GET MASTERED</span><span> FOR FREE</span> </h2>
+			<h2><span>GET MASTERED.</span><span><font color="#84E8E1"> FOR FREE.</font></span> </h2>
 			<h4>Free mastering job for new users, with no commitment</h4>
 		</div>
 		<div class="page-scroll">
@@ -76,17 +76,19 @@
     </section>
 	<!-- /Section: intro -->
 
-<!-- 
-	 Section: about 
-    <section id="about" class="home-section text-center">
+
+	<!--  Section: about  -->
+    <section id="about" class="home-section text-center bg-gray">
 		<div class="heading-about">
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>About us</h2>
+					<font color="000000">
+					<h2>What?</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
+					</color>
 
 					</div>
 					</div>
@@ -102,62 +104,39 @@
 			</div>
 		</div>
         <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="wow bounceInUp" data-wow-delay="0.2s">
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Anna Hanaceck</h5>
-                        <p class="subtitle">Pixel Crafter</p>
-                        <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
-                    </div>
-                </div>
-				</div>
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="wow bounceInUp" data-wow-delay="0.5s">
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Maura Daniels</h5>
-                        <p class="subtitle">Ruby on Rails</p>
-                        <div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive img-circle" /></div>
+            <div class="col-lg-8 col-lg-offset-2">
+					<div class="wow bounceInDown" data-wow-delay="0.2s">
+					<div class="section-heading">
+					<p>
+						My name is Keenan. I have been mixing and mastering music for most of my life, and have always gawked at the high prices typically charged for these services. With the lack of any legitimate low-cost mastering websites online, I decided to put my skills and experience to use and start my own.<br>
+						<br>
+						<i>
+						I created GetMastered.com to offer musicians an inexpensive way to acheive a professional, high quality sound. Plain and simple.</i><br>
+						<br>
+						In an effort to show I really, really mean it, I have decided to offer free, no-strings-attached mastering to any new members of my growing clientele. After this, I charge the lowest rates I possibly can, to pay for a) a place to live b) food to eat and c) coffee.<br>
+						<br>
+						I just want to make a modest living helping musicians like you who don’t want to break the bank to get mastered. I am confident that you will love what I do to your song, and hope you don’t miss out on this opportunity!<br>
+						<br>
+						<b>For a limited time, I’m also offering another free master if you refer a friend.</b> Yep. That’s two songs mastered for free. No sleep for me for a while (that’s what the coffee is for). Just have your friend mention your name to me.<br>
+						<br>
+						Hope to hear you soon,<br>
+						Keenan <br>
+						<br>
+						P.S. I also offer equally inexpensive mixing services! Scroll down for details.
+					</p>
 
-                    </div>
-                </div>
+					</div>
+					</div>
 				</div>
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="wow bounceInUp" data-wow-delay="0.8s">
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Jack Briane</h5>
-                        <p class="subtitle">jQuery Ninja</p>
-                        <div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                    </div>
-                </div>
-				</div>
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="wow bounceInUp" data-wow-delay="1s">
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Tom Petterson</h5>
-                        <p class="subtitle">Typographer</p>
-                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                    </div>
-                </div>
-				</div>
-            </div>
         </div>		
 		</div>
 	</section>
-	/Section: about
-	 -->
+	<!-- /Section: about -->
+
 	
 
 	<!-- Section: services -->
-    <section id="service" class="home-section text-center bg-gray">
+    <section id="service" class="home-section text-center">
 		
 		<div class="heading-about">
 			<div class="container">
@@ -165,8 +144,9 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>How it works:</h2>
-					<i class="fa fa-2x fa-angle-down"></i>
+					<!-- <h2>Now about that free master...</h2> -->
+					<h1><a href="https://www.wetransfer.com/?to=freemaster@getmastered.com&msg=Get%20me%20mastered!" target="_blank" ><b><u><font color="#84E8E1">Submit your song here</font></b></u></a><br></h1>
+					<h5><font color="#000000">and get it mastered for free</font></h5>
 
 					</div>
 					</div>
@@ -177,49 +157,28 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-2 col-lg-offset-5">
-				<hr class="marginbot-50">
+				<!-- <hr class="marginbot-50"> -->
 			</div>
 		</div>
         <div class="row">
-            <div class="col-sm-3 col-md-3">
-				<div class="wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="service-box">
-					<!-- <div class="service-icon">
-						<img src="img/icons/service-icon-1.png" alt="" />
-					</div> -->
-					<div class="service-desc">
-						<h5></h5>
-						<p></p>
+			<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<div class="wow fadeInUp" data-wow-delay="0.2s">
+
+					<font color="#000000">
+					<h2>Really!<br></h2>
+					<p>
+					<br>
+					Make sure to send a high-quality wav bounce of your mix, and include an email address to which you want your master delivered.<br>
+					<br>
+					<i>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions. But your music is, like, realy really good? Send me a link!</i></p>
+					</font>
+
 					</div>
-                </div>
 				</div>
-            </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-					<!-- <div class="service-icon">
-						<img src="img/icons/service-icon-2.png" alt="" />
-					</div> -->
-					<div class="service-desc">
-						<h5>1. Get in Touch</h5>
-						<p>Paste a link to one of your best songs in the form below</p>
-					</div>
-                </div>
-				</div>
-            </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-					<!-- <div class="service-icon">
-						<img src="img/icons/service-icon-3.png" alt="" />
-					</div> -->
-					<div class="service-desc">
-						<h5>2. Get Mastered</h5>
-						<p>I master one of your songs, totally on the free</p>
-					</div>
-                </div>
-				</div>
-            </div>
+			</div>
+			</div>
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
@@ -242,16 +201,17 @@
 	
 
 	<!-- Section: contact -->
-    <section id="contact" class="home-section text-center">
+    <section id="contact" class="home-section text-center bg-gray">
 		<div class="heading-contact">
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>1. Get in Touch</h2>
+					<h2>Questions about Rates?</h2>
 
-					<p>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions, which is why I ask for a link to your music. Think your music is, like, realy really good? Send me a link!<p>
+					<p>I would love to help you with more than just one master!<br>
+					For information on rates, mixing services, or anything else, contact me with the form below:<p>
 
 					<i class="fa fa-2x fa-angle-down"></i>
 
@@ -292,9 +252,10 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Free free free gimme!">Free master, free master, gimme!</option>
-                                <option value="Mixing">I heard from this choice that you mix as well. Is that true? Can I get in on some of that?</option>
-                                <option value="Webiste: Other">Other</option>
+                                <option value="Question: Mixing">Masering Rates</option>
+                                <option value="Question: Mixing">Mixing Rates</option>
+                                <option value="Question: Other"> Question</option>
+                                <option value="Question: I'm sketched out">I'm kinda sketched out by this whole free master thing. Why are you doing this?</option>
                             </select>
                         </div>
                     </div>
