--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 	<!-- /Section: contact -->
 
 	<footer>
-		<div class="container">
+		<div class="container bg-gray">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
 					<div class="wow shake" data-wow-delay="0.4s">
