--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@gmail.com">
+                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -314,7 +314,7 @@
 	<!-- /Section: contact -->
 
 	<footer>
-		<div class="container bg-gray">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
 					<div class="wow shake" data-wow-delay="0.4s">
