--- a/index.html
+++ b/index.html
@@ -104,25 +104,24 @@
 			</div>
 		</div>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12">
 					<div class="wow bounceInDown" data-wow-delay="0.2s">
 					<div class="section-heading">
 					<p>
-						My name is Keenan. I have been mixing and mastering music for most of my life, and have always gawked at the high prices typically charged for these services. With the lack of any legitimate low-cost mastering websites online, I decided to put my skills and experience to use and start my own.<br>
+						My name is Keenan Hye, and I created GetMastered.com because, growing up as a musician and audio engineer, I was always frustrated by the outrageous rates studios charged for mixing and mastering, when I was achieving just as pristine results with little more than the right equipment and some experienced ears! <br>
+						<br>
+						I was producing professional music at a much lower price than my studio-dwelling peers, so I decided to create this website devoted to low-cost mixing and mastering to help people realize how inexpensive quality music production can be. I even offer a master for free, because I want you to hear first hand: traditional studios are overcharging!<br>
 						<br>
 						<i>
 						I created GetMastered.com to offer musicians an inexpensive way to acheive a professional, high quality sound. Plain and simple.</i><br>
 						<br>
-						In an effort to show I really, really mean it, I have decided to offer free, no-strings-attached mastering to any new members of my growing clientele. After this, I charge the lowest rates I possibly can, to pay for a) a place to live b) food to eat and c) coffee.<br>
+						After your free master, I charge the lowest rates I possibly can, to pay for a) a place to live b) food to eat and c) coffee. That’s it. And I buy cheap coffee! You are completely open to take your free master and run, but I am confident you’ll love what you hear enough to stick around, and hope you will consider helping me make a modest living doing what I love.<br>
 						<br>
-						I just want to make a modest living helping musicians like you who don’t want to break the bank to get mastered. I am confident that you will love what I do to your song, and hope you don’t miss out on this opportunity!<br>
 						<br>
-						<b>For a limited time, I’m also offering another free master if you refer a friend.</b> Yep. That’s two songs mastered for free. No sleep for me for a while (that’s what the coffee is for). Just have your friend mention your name to me.<br>
+						<b>For a limited time, I’m also offering another free master if you refer a friend.</b> Yep. That’s two songs mastered for free. No sleep for me for a while (that’s what the coffee is for). This one won’t last forever; don’t miss out!<br>
 						<br>
 						Hope to hear you soon,<br>
 						Keenan <br>
-						<br>
-						P.S. I also offer equally inexpensive mixing services! Scroll down for details.
 					</p>
 
 					</div>
@@ -172,7 +171,7 @@
 					<br>
 					Make sure to send a high-quality wav bounce of your mix, and include an email address to which you want your master delivered.<br>
 					<br>
-					<i>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions. But your music is, like, realy really good? Send me a link!</i></p>
+					<i>Disclaimer: Due to the number of responses I recieve, I am not able to handle one-hundred percent of submissions. But your music is, like, realy really good? Send me a song!</i></p>
 					</font>
 
 					</div>
