--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						featured on Get Mastered!<br>
 						<b>Please include a link to some of your music</b><br>
 						<br>
-						I love to hear feedback from my readers! If
+						I love to hear feedback from readers! If
 						you have anything else you just HAVE to tell me, this
 						for is the place for that too.<p>
 
@@ -219,7 +219,7 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Get Mastered: Submission">Submission Inquiry</option>
+                                <option value="Get Mastered: Submission">Music Submission</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
