--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 	
 		<div class="slogan">
 			<p></p>
-			<h2><span>GET MASTERED<br></span>
-			<span><font color="#84E8E1"> <a href="#service">FOR FREE</a></font></span> </h2>
+			<h4><span>GET MASTERED<br></span></h4>
+			<h2><span><font color="#84E8E1"> <a href="#service">FOR FREE</a></font></span> </h2>
 			<h4>The DIY Mastering Blog is now accepting submissions!</h4>
 		</div>
 		<div class="page-scroll">
