--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="/blog">
-                    <h1 style="color:#84E8E1">Get Mastered<span style="color:#fff; font-size: 12px; text-transform: lowercase;"> The DIY Mastering Blog</span></h1>
+                    <h1><span style="color:#84E8E1">Get Mastered</span><span style="font-size: 12px; text-transform: lowercase;"> The DIY Mastering Blog</span></h1>
                 </a>
             </div>
 
