--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	  <div id="load"></div>
 	</div>
 
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="box-shadow: 0px 3px 3px #888888;">
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container-fluid">
-            <div class="navbar-header page-scroll">
+            <div class="navbar-header page-scroll" style="box-shadow: 0px 3px 3px #888888;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
