--- a/directory/Depth/index.html
+++ b/directory/Depth/index.html
@@ -4,11 +4,13 @@ layout: default
 ---
 
 
-<section id="blog">
+<section id="Depth">
+	<div class="row-fluid" style="padding: 13px 0px 700px 0px;">
 {% for post in site.tags.depth %}
   <div class="row-fluid">
       <p style="font-size: 14px; line-height: 0.3em;"><a href="{{ post.url }}"><u>{{ post.title }}</u></a></p>
   </div>
 {% endfor %}
+</div>
 
 </section>
